# PRE-O-BAIXO-A.I

./: .gitignore  README.md  db.sqlite3  local_adm.py  modelo_django.py  pyproject.toml
buscador/: admin.py  apps.py  models.py  teste_gemini.py
buscador/migrations/: 0001_initial.py
core/: settings.py
