[project]
name = "preco-baixo-ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matheus", email = "massarandubadejesus@gmail.com"},
]
dependencies = ["django>=6.0.4", "google-generativeai>=0.8.6", "python-dotenv>=1.2.2"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
